button text alignment fixed

--- a/src/css/Description.css
+++ b/src/css/Description.css
@@ -55,7 +55,8 @@
     color: white;
     border-radius: 5px;
     display: flex;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 .add-btn, .num-btn{
     padding: 0.3em;
